# on-the-record

./: .gitignore  BUILD-PLAN-ON-THE-RECORD.md  PROVENANCE.md  README.md  track2-report-01-claims-digest.md
contracts/on-the-record/: Cargo.toml  on_the_record.wasm
contracts/on-the-record/src/: lib.rs
contracts/on-the-record/wit/: world.wit
on-the-record/: DORAHACKS-FIELDS.md  DORAHACKS-SUBMIT-PACKET.md  DORAHACKS_SUBMISSION.md  README.md  RECORDING_NOTES.md  SUBMISSION.md  VIDEO_SCRIPT.md  agent-loop.mjs  authority-verify.mjs  cover.html  demo-transcript.txt  demo.cast  demo.mjs  export-a2.json  export-a3.json  export-agent.json  export-authority.json  export.json  filing.md  filmstrip.html  logo.html  narration.txt  record-filmstrip.py  render-filing.mjs  verifier.mjs  verifier.test.mjs  vo.txt
on-the-record/proxy/: README.md  custody.mjs  mcp-server.mjs  package-lock.json  package.json  prove.mjs  usage-probe.mjs
relay-build/: PLAN.md  adversarial.mjs  boundary-evidence.txt  boundary_probe.mjs  build_slides_mesh.py  export-A.json  export-B.json  export-C.json  narration_mesh.txt  probe_subfloor.mjs  relay.mjs  subfloor-evidence.txt
