[package]
name = "on-the-record"
version = "0.1.0"
edition = "2021"
description = "On the Record — receipt-runtime contract (salted hash-chained, enclave-enforced audit trail)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
